deploy/envoy/envoy-dev.yaml
static_resources:
  listeners:
  - name: main_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: dev
              domains: ["*"]
              routes:
              - match: { prefix: "/echo" }
                route:
                  cluster: backend_cluster
                  timeout: 60s
              - match: { prefix: "/" }
                direct_response:
                  status: 404
                  body:
                    inline_string: "not routed"
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              failure_mode_allow: false
              clear_route_cache: true
              status_on_error:
                code: 503
              http_service:
                server_uri:
                  uri: promptshield-cluster
                  cluster: ps_enforcer_http
                  timeout: 1s
                path_prefix: "/check"
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service:
                envoy_grpc:
                  cluster_name: ps_enforcer_grpc
                  authority: promptshield.local
              message_timeout: 5s
              failure_mode_allow: false
              async_mode: false
              processing_mode:
                request_header_mode: SEND
                request_body_mode: STREAMED
                request_trailer_mode: SKIP
                response_header_mode: SEND
                response_body_mode: STREAMED
                response_trailer_mode: SKIP
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: ps_enforcer_http
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ps_enforcer_http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: promptshield, port_value: 9090 }

  - name: ps_enforcer_grpc
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options:
            max_concurrent_streams: 100
    load_assignment:
      cluster_name: ps_enforcer_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: promptshield, port_value: 9091 }

  - name: backend_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: backend, port_value: 80 }

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
